--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <!--second line-->
 
     <div class="row">
-        <a href="https://vaahika.com">
+        <a href="https://play.google.com/store/apps/details?id=com.vaahika.vaahika">
             <div class="hexagon hexagon2">
                 <div class="hexagon-in1">
                     <div class="portfolioImage5 hexagon-in2"></div>
