--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="parallax">
     <h1 id="name" class="text-center">PREETAM SWAMI</h1>
-    <h3 id="profession" class="text-center">Android Developer</h3>
+    <h3 id="profession" class="text-center">Software Developer</h3>
 
 </div>
 
