--- a/index.html
+++ b/index.html
@@ -114,131 +114,117 @@
     <div class="container ptb-96">
         <div class="row">
             <div class="col-12 text-center">
-                <p class="red-light-color">Skills</p>
-                <h2 class="black-light-color"></h2>
+                <h2 class="red-light-color">Skills</h2>
             </div>
         </div>
-        <div class="row">
+        <div class="row ptb-96">
             <div class="col-12">
-
-
-                <div class="row">
-                    <div id="designer" class="designer col-6" style="opacity: 1; z-index: 10;">
-                        <div id="designer-desc" class="description" style="opacity: 1;">
-                            <h1>designer</h1>
-                            <p>UI/UX Designer with a passion for designing beautiful and functional user
-                                experiences.</p>
-                        </div>
-                    </div>
-
-                    <div id="coder" class="coder col-6" style="opacity: 1; z-index: 10;">
-                        <div id="coder-desc" class="description" style="opacity: 1;">
-                            <h1>&lt;coder&gt;</h1>
-                            <p>Front End Developer who focuses on writing clean, elegant and efficient code.</p>
-                        </div>
-                    </div>
+                <div id="designer" class="designer">
+                    <h1>designer</h1>
+                    <p>UI/UX Designer with a passion for designing beautiful and functional user
+                        experiences.</p>
                 </div>
 
-                <img class="img-fluid tog-img" src="images/tug-of-war.jpg" alt="designer/coder">
-                <img class="img-fluid designer-img" src="images/tog_right.png" alt="designer/coder">
-                <img class="img-fluid coder-img" src="images/tog_left.png" alt="designer/coder">
+                <div id="coder" class="coder">
+                    <h1>&lt;coder&gt;</h1>
+                    <p>FullStack Developer who enjoys mobile and web applications development</p>
+                </div>
+
+                <img class="img-fluid tog-img mt-3" src="images/tug-of-war.jpg" alt="designer/coder">
+                <img class="img-fluid designer-img mt-3" src="images/tog_right.png" alt="designer/coder">
+                <img class="img-fluid coder-img mt-3" src="images/tog_left.png" alt="designer/coder">
 
 
-                <!-- <div id="designer-img" class="designer-img" style="left: 100px; opacity: 1; width: 420px;"></div>
-                <div id="coder-img" class="coder-img" style="right: 100px; opacity: 1; width: 420px;"></div>
-                <div id="designer-bg" class="designer-bg" style="left: 100px; opacity: 1;"></div>
-                <div id="coder-bg" class="coder-bg" style="right: 100px; opacity: 1;"></div> -->
+
 
             </div>
-
         </div>
-    </div>
 
 
 
 
 
 
-    <!-- Le javascript
+        <!-- Le javascript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!-- Required by Bootstrap v4.3.1 -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script>
-        var initialPosDesigner = -1;
-        var initialPosCoder = -1;
-        $(document).ready(function () {
-            $('#designer').on('mousemove', function (e) {
-                var relMouseX = e.pageX - this.offsetLeft;
-                var displacement = relMouseX - initialPosDesigner;
-                if (displacement > 20) {
-                    displacement = 1;
-                }
-                var coder_img = $('.coder-img');
-                var tog_img = $('.tog-img');
-                tog_img.css('opacity', .5);
-                coder_img.css('opacity', .5);
-                coder_img.css('left', '+=' + displacement / 3);
-                tog_img.css('left', '+=' + displacement / 3.6);
-                // if (relMouseX < initialPosDesigner) {
-                //     // mouse left side
-                //     // var is_left = (e.pageX - this.offsetLeft) < $(this).width() / 2;
-                // } else if (relMouseX > initialPosDesigner) {
-                //     //mouse right side
-                // }
-                initialPosDesigner = relMouseX;
-            });
+        <!-- Placed at the end of the document so the pages load faster -->
+        <!-- Required by Bootstrap v4.3.1 -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+        <script>
+            var initialPosDesigner = -1;
+            var initialPosCoder = -1;
+            $(document).ready(function () {
+                $('#designer').on('mousemove', function (e) {
+                    var relMouseX = e.pageX - this.offsetLeft;
+                    var displacement = relMouseX - initialPosDesigner;
+                    if (displacement > 20) {
+                        displacement = 1;
+                    }
+                    var coder_img = $('.coder-img');
+                    var tog_img = $('.tog-img');
+                    tog_img.css('opacity', .5);
+                    coder_img.css('opacity', .5);
+                    coder_img.css('left', '+=' + displacement / 3);
+                    tog_img.css('left', '+=' + displacement / 3.6);
+                    // if (relMouseX < initialPosDesigner) {
+                    //     // mouse left side
+                    //     // var is_left = (e.pageX - this.offsetLeft) < $(this).width() / 2;
+                    // } else if (relMouseX > initialPosDesigner) {
+                    //     //mouse right side
+                    // }
+                    initialPosDesigner = relMouseX;
+                });
 
-            $('#designer').on('mouseleave', function (e) {
-                initialPosDesigner = -1;
-                var coder_img = $('.coder-img');
-                var tog_img = $('.tog-img');
-                tog_img.css('left', 0);
-                tog_img.css('opacity', 1);
-                coder_img.css('left', "-1px");
-                coder_img.css('opacity', 0);
-            });
+                $('#designer').on('mouseleave', function (e) {
+                    initialPosDesigner = -1;
+                    var coder_img = $('.coder-img');
+                    var tog_img = $('.tog-img');
+                    tog_img.css('left', 0);
+                    tog_img.css('opacity', 1);
+                    coder_img.css('left', "-1px");
+                    coder_img.css('opacity', 0);
+                });
 
-            $('#coder').on('mousemove', function (e) {
-                var relMouseX = e.pageX - this.offsetLeft;
-                var displacement = relMouseX - initialPosCoder;
-                if (displacement > 20) {
-                    displacement = 1;
-                }
-                var designer_img = $('.designer-img');
-                var tog_img = $('.tog-img');
-                tog_img.css('opacity', .5);
-                designer_img.css('opacity', .5);
-                // designer_img.css('left', '+=' + displacement / 3);
-                tog_img.css('left', '+=' + displacement / 8);
-                // if (relMouseX < initialPosCoder) {
-                //     // mouse left side
-                //     // var is_left = (e.pageX - this.offsetLeft) < $(this).width() / 2;
-                // } else if (relMouseX > initialPosCoder) {
-                //     //mouse right side
-                // }
-                initialPosCoder = relMouseX;
+                $('#coder').on('mousemove', function (e) {
+                    var relMouseX = e.pageX - this.offsetLeft;
+                    var displacement = relMouseX - initialPosCoder;
+                    if (displacement > 20) {
+                        displacement = 1;
+                    }
+                    var designer_img = $('.designer-img');
+                    var tog_img = $('.tog-img');
+                    tog_img.css('opacity', .5);
+                    designer_img.css('opacity', .5);
+                    // designer_img.css('left', '+=' + displacement / 3);
+                    tog_img.css('left', '+=' + displacement / 8);
+                    // if (relMouseX < initialPosCoder) {
+                    //     // mouse left side
+                    //     // var is_left = (e.pageX - this.offsetLeft) < $(this).width() / 2;
+                    // } else if (relMouseX > initialPosCoder) {
+                    //     //mouse right side
+                    // }
+                    initialPosCoder = relMouseX;
+
+                });
+                $('#coder').on('mouseleave', function (e) {
+                    initialPosCoder = -1;
+                    var designer_img = $('.designer-img');
+                    var tog_img = $('.tog-img');
+                    tog_img.css('left', 0);
+                    tog_img.css('opacity', 1);
+                    designer_img.css('left', "1px");
+                    designer_img.css('opacity', 0);
+                });
 
             });
-            $('#coder').on('mouseleave', function (e) {
-                initialPosCoder = -1;
-                var designer_img = $('.designer-img');
-                var tog_img = $('.tog-img');
-                tog_img.css('left', 0);
-                tog_img.css('opacity', 1);
-                designer_img.css('left', "10px");
-                designer_img.css('opacity', 0);
-            });
-
-        });
-    </script>
+        </script>
 </body>
 
 </html>
