project img zoom effect and mobile design fixes

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-            <div class="col-2"></div>
+            <div class="col-md-2"></div>
             <div class="navbar-nav">
                 <a class="nav-item nav-link mr-4" href="#about">About</a>
                 <a class="nav-item nav-link mr-4" href="#">Blog</a>
                 <a class="nav-item nav-link mr-4" href="#contact">Contact</a>
                 <a class="nav-item nav-link mr-4" href="#hobbies">Hobbies</a>
             </div>
-            <div class="col-2"></div>
+            <div class="col-md-2"></div>
         </div>
     </nav>
     <div class="container ptb-96">
-        <div class="col-12 text-center">
+        <div class="col-md-12 text-center">
             <h1>Preetam Swami</h1>
             <p class="subtitle">Software Engineer</p>
         </div>
@@ -52,8 +52,8 @@
 
     <div class="container-fluid" id="about">
         <div class="row">
-            <div class="col-1"></div>
-            <div class="col-5 red-light-back-color">
+            <div class="col-md-1"></div>
+            <div class="col-md-5 red-light-back-color">
                 <div class="row is-split-50-50">
                     <div class="col-6 offset-3">
                         <div class="name-container">
@@ -64,7 +64,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-5 grey-back-color">
+            <div class="col-md-5 grey-back-color">
                 <p class="red-light-color caps" style="padding-top: 40px;">ABOUT</p>
                 <h2 class="mt-4">FullStack Devops</h2>
                 <p class="mt-5">I have over 2.5 years of experience as a software engineer, and have worked both at
@@ -72,7 +72,7 @@
                 <p class="mt-5">Love to work as backend developer to build scalable backend
                     services and interest in system design, automation, keep's me going on.</p>
             </div>
-            <div class="col-1"></div>
+            <div class="col-md-1"></div>
         </div>
     </div>
     <div class="d-flex justify-content-center">
@@ -80,54 +80,91 @@
     </div>
     <div class="container-fluid" id="hobbies">
         <div class="row">
-            <div class="col-1"></div>
-            <div class="col-4 grey-back-color pl-4 pr-4">
+            <div class="col-md-1"></div>
+            <div class="col-md-4 grey-back-color pl-4 pr-4">
                 <p class="red-light-color caps" style="padding-top: 40px;">HOBBIES</p>
                 <h2 class="mt-4">Gaming</h2>
                 <p class="mt-5">Love to play third person shooting games, </p>
                 <p class="mt-5"></p>
             </div>
-            <div class="col-6 grey-back-color">
+            <div class="col-md-6 grey-back-color">
                 <div class="row" id="hobbiesBack">
                     <div id="hobbiesContainer" class="text-center">
                     </div>
                 </div>
             </div>
-            <div class="col-1"></div>
+            <div class="col-md-1"></div>
         </div>
     </div>
 
     <div class="container ptb-96">
         <div class="row">
-            <div class="col-12 text-center">
-                <p class="red-light-color">CONTRIBUTIONS</p>
-                <h2 class="black-light-color">Real World</h2>
+            <div class="col-md-12 text-center">
+                <h2 class="red-light-color">PROJECTS</h2>
+                <p class="black-light-color mt-2">Contributions</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-4"></div>
-            <div class="col-4"></div>
-            <div class="col-4"></div>
+        <div class="row mt-5">
+            <div class="col-md-4 mt-4">
+                <div class="d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <div class="img-hover-zoom">
+                            <img src="images/attendanceApp.jpg" class="card-img-top" alt="Attendance App">
+                        </div>
+                        <div class="card-body grey-back-color">
+                            <p class="card-text">Easy attendance management</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-md-4 mt-4">
+                <div class="d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <div class="img-hover-zoom">
+                            <img src="images/attendanceApp.jpg" class="card-img-top" alt="Attendance App">
+                        </div>
+                        <div class="card-body grey-back-color">
+                            <p class="card-text">Easy attendance management</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-md-4 mt-4">
+                <div class="d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <div class="img-hover-zoom">
+                            <img src="images/attendanceApp.jpg" class="card-img-top" alt="Attendance App">
+                        </div>
+                        <div class="card-body grey-back-color">
+                            <p class="card-text">Easy attendance management</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 
     <div class="container ptb-96">
         <div class="row">
-            <div class="col-12 text-center">
-                <h2 class="red-light-color">Skills</h2>
+            <div class="col-md-12 text-center">
+                <h2 class="red-light-color">SKILLS</h2>
             </div>
         </div>
         <div class="row ptb-96">
-            <div class="col-12">
-                <div id="designer" class="designer">
+            <div class="col-md-12">
+                <div id="designer" class="designer  text-center">
                     <h1>designer</h1>
-                    <p>UI/UX Designer with a passion for designing beautiful and functional user
+                    <p class="mt-2">UI/UX Designer with a passion for designing beautiful and functional user
                         experiences.</p>
                 </div>
 
-                <div id="coder" class="coder">
+                <div id="coder" class="coder text-center">
                     <h1>&lt;coder&gt;</h1>
-                    <p>FullStack Developer who enjoys mobile and web applications development</p>
+                    <p class="mt-2">FullStack Engineer who enjoys writing efficient code, system designing and learning
+                        amazing technologies.</p>
                 </div>
 
                 <img class="img-fluid tog-img mt-3" src="images/tug-of-war.jpg" alt="designer/coder">
