--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
         <div class="row ptb-96">
             <div class="col-md-12">
-                <div id="designer" class="designer  text-center">
+                <div id="designer" class="designer text-center">
                     <h1>designer</h1>
                     <p class="mt-2">UI/UX Designer with a passion for designing beautiful and functional user
                         experiences.</p>
@@ -161,7 +161,8 @@
 
                 <div id="coder" class="coder text-center">
                     <h1>&lt;coder&gt;</h1>
-                    <p class="mt-2">FullStack Engineer who enjoys writing efficient code, working on system design and learning
+                    <p class="mt-2">FullStack Engineer who enjoys writing efficient code, working on system design and
+                        learning
                         amazing technologies.</p>
                 </div>
 
@@ -171,6 +172,13 @@
             </div>
         </div>
 
+    </div>
+    <div class="container" style="margin-top: 300px;">
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="black-light-color text-center">Under Construction!!</h2>
+            </div>
+        </div>
     </div>
 
 
