--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <div class="name-container">
                             <p><b>Preetam Swami</b> — SDE at <i>Cargill</i></p>
                         </div>
-                        <img class="img-fluid" src="images/me.jpg" alt="Preetam Swami">
+                        <img class="img-fluid" src="https://via.placeholder.com/440x587.png/FFFFFF/000000?text=Profile+Image" alt="Preetam Swami">
 
                     </div>
                 </div>
