--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <img src="images/attendanceApp.jpg" class="card-img-top" alt="Attendance App">
                         </div>
                         <div class="card-body grey-back-color">
-                            <p class="card-text">Easy attendance management</p>
+                            <p class="card-text">N/A</p>
                         </div>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                             <img src="images/attendanceApp.jpg" class="card-img-top" alt="Attendance App">
                         </div>
                         <div class="card-body grey-back-color">
-                            <p class="card-text">Easy attendance management</p>
+                            <p class="card-text">N/A</p>
                         </div>
                     </div>
                 </div>
@@ -144,6 +144,14 @@
             </div>
         </div>
     </div>
+
+    <div class="container ptb-32">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="black-light-color text-center">Under Construction!!</h2>
+                </div>
+            </div>
+        </div>
 
     <div class="container ptb-96">
         <div class="row">
@@ -155,8 +163,7 @@
             <div class="col-md-12">
                 <div id="designer" class="designer text-center">
                     <h1>designer</h1>
-                    <p class="mt-2">UI/UX Designer with a passion for designing beautiful and functional user
-                        experiences.</p>
+                    <p class="mt-2">UI/UX Designer who focus on why, what, how aspects of product.</p>
                 </div>
 
                 <div id="coder" class="coder text-center">
@@ -168,18 +175,12 @@
 
                 <img class="img-fluid tog-img mt-3" src="images/tug-of-war.jpg" alt="designer/coder">
                 <img class="img-fluid designer-img mt-3" src="images/tog_right.png" alt="designer/coder">
-                <img class="img-fluid coder-img mt-3" src="images/tog_left.png" alt="designer/coder">
+                <img class="img-fluid coder-img mt-3 mb-3" src="images/tog_left.png" alt="designer/coder">
             </div>
         </div>
 
     </div>
-    <div class="container" style="margin-top: 300px;">
-        <div class="row">
-            <div class="col-md-12">
-                <h2 class="black-light-color text-center">Under Construction!!</h2>
-            </div>
-        </div>
-    </div>
+    
 
 
 
